[package]
name = "sms-collector-service-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0"
serde_json = "1.0"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
ably = "1.1"
rusqlite = "0.26.0"
parquet = "4.0.0"
protobuf = "2.26"
redis = "0.24.1"
rlua = "0.19.3"
actix-web = "4"
actix-web-actors = "4"
tokio-tungstenite = "0.15"
futures-util = "0.3"
hyper = { version = "0.14", features = ["full"] }
redis = "0.24.1"
rlua = "0.19.3"
