[package]
name = "sms-collector-service-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0"
serde_json = "1.0"
reqwest = "0.12.12"
tokio = { version = "1", features = ["full"] }
ably = "0.2.0"
rusqlite = "0.33.0"
parquet = "54.1.0"
protobuf = "3.7.1"
redis = "0.28.2"
actix-web = "4"
actix-web-actors = "4"
tokio-tungstenite = "0.26.1"
futures-util = "0.3"
hyper = { version = "1.6.0", features = ["full"] }
rlua = "0.20.1"
